test/cli/test/cel-http-get-mock/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
  labels:
    app: test
spec:
  containers:
    - name: pause
      image: registry.k8s.io/pause:latest
      resources:
        requests:
          cpu: 10m
          memory: 10Mi
        limits:
          cpu: 10m
          memory: 10Mi
  terminationGracePeriodSeconds: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
  labels:
    app: prod
spec:
  containers:
    - name: pause
      image: registry.k8s.io/pause:latest
      resources:
        requests:
          cpu: 10m
          memory: 10Mi
        limits:
          cpu: 10m
          memory: 10Mi
  terminationGracePeriodSeconds: 0
